<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.mentalmath.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_GameFragment"
            app:destination="@id/GameFragment" />

    </fragment>

    <fragment
        android:id="@+id/GameFragment"
        android:name="com.example.mentalmath.GameFragment"
        android:label="@string/nav_game"
        tools:layout="@layout/fragment_game">

        <action
            android:id="@+id/action_GameFragment_to_EndGameFragment"
            app:destination="@id/EndGameFragment" />

    </fragment>

    <fragment
        android:id="@+id/EndGameFragment"
        android:name="com.example.mentalmath.EndGameFragment"
        android:label="@string/nav_end_game"
        tools:layout="@layout/fragment_end_game">

        <action
            android:id="@+id/action_EndGameFragment_to_HomeFragment"
            app:destination="@id/HomeFragment"
            app:popUpTo="@id/HomeFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_EndGameFragment_to_GameFragment"
            app:destination="@id/GameFragment"
            app:popUpTo="@id/HomeFragment" />

    </fragment>

</navigation>
